<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtAutoLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone|email|web"
            android:text="@string/texto_auto_link"/>

        <TextView
            android:id="@+id/txtBigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/texto_grande_exceder"/>

        <TextView
            android:id="@+id/txtMonoSpaced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:typeface="monospace"
            android:text="@string/texto_fonte_monospace"/>

        <TextView
            android:id="@+id/txtFonteCustomizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/frijole_regular"
            android:text="@string/texto_fonte_customizada"/>

        <TextView
            android:id="@+id/txtStrike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/texto_strike"/>

        <TextView
            android:id="@+id/txtHtml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtSpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:bufferType="spannable"/>

    </LinearLayout>

</ScrollView>